--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,13 +18,7 @@
 <div class="page__footer-copyright" style="float: right; ">
   <a href="https://nsf.gov"><img src="/assets/images/nsf-logo.png" style="padding: 5px;" /></a>
   <a href="https://vt.edu"><img src="/assets/images/vt-logo.png" style="padding: 5px;" /></a><br />
-  <a href="https://ufl.edu"><img src="/assets/images/uf-logo.png" style="padding: 5px;" /></a>
-  <a href="https://acis.ufl.edu"><img src="/assets/images/acis-logo.png" style="padding: 5px;" /></a>
 </div>
 <div class="page__footer-copyright">
-<em>FLARE</em> is a collaboration among:<br />
-ACIS Lab, Department of Electrical & Computer Engineering, University of Florida</br/>
-Department of Forest Resources & Environmental Conservation, Virginia Tech<br />
-Department of Biological Sciences, Virginia Tech<br />
-<em>FLARE</em> is supported by the US National Science Foundation as part of awards CNS-1737424, DBI-1933102, and DBI-1933016​.<br />
+Virginia Reservoirs LTREB is supported by the US National Science Foundation as part of awards DEB-2327030 </br/>
 &copy; {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}. {{ site.data.ui-text[site.locale].powered_by | default: "Powered by" }} <a href="https://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/" rel="nofollow">Minimal Mistakes</a>.</div>
