--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,5 +20,5 @@
   <a href="https://vt.edu"><img src="/assets/images/vt-logo.png" style="padding: 5px;" /></a><br />
 </div>
 <div class="page__footer-copyright">
-Virginia Reservoirs LTREB is supported by the US National Science Foundation as part of awards DEB-2327030 </br/>
+Virginia Reservoirs LTREB is supported by the US National Science Foundation as part of award DEB-2327030 </br/>
 &copy; {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}. {{ site.data.ui-text[site.locale].powered_by | default: "Powered by" }} <a href="https://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/" rel="nofollow">Minimal Mistakes</a>.</div>
